# trad-signer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.agent/skills/chains-sdk/: SKILL.md
.github/workflows/: ci.yml
benches/: security_bench.rs  signing_bench.rs
examples/: ethereum_signing.rs  multi_chain.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_abi_decode.rs  fuzz_bip39_mnemonic.rs  fuzz_bitcoin.rs  fuzz_bls.rs  fuzz_ct_hex.rs  fuzz_ed25519.rs  fuzz_ethereum.rs  fuzz_from_wif.rs  fuzz_from_xprv.rs  fuzz_mnemonic_from_phrase.rs  fuzz_permit2_hash.rs  fuzz_psbt_deserialize.rs  fuzz_psbt_parse.rs  fuzz_rlp_decode.rs
src/: atomic_swap.rs  bip85.rs  crypto.rs  descriptor.rs  encoding.rs  error.rs  hd_key.rs  hex_bytes.rs  lib.rs  mnemonic.rs  security.rs  traits.rs
src/bitcoin/: descriptor.rs  helpers.rs  lightning.rs  message.rs  miniscript.rs  mod.rs  musig2_tx.rs  ordinals.rs  schnorr.rs  scripts.rs  sighash.rs  silent_payments.rs  taproot.rs  tapscript.rs  transaction.rs
src/bitcoin/psbt/: v0.rs  v2.rs
src/bls/: eip2333.rs  mod.rs  threshold.rs
src/ethereum/: abi.rs  eips.rs  keystore.rs  mod.rs  permit2.rs  proxy.rs  rlp.rs  safe.rs  siwe.rs  smart_wallet.rs  transaction.rs  uniswap_v4.rs  userop.rs
src/neo/: mod.rs  transaction.rs  witness.rs
src/psbt/: mod.rs  v0.rs
src/solana/: dex.rs  governance.rs  metaplex.rs  mod.rs  programs.rs  token_extensions.rs  transaction.rs
src/threshold/: mod.rs
src/threshold/frost/: keygen.rs  mod.rs  refresh.rs  signing.rs
src/threshold/musig2/: mod.rs  nested.rs  signing.rs  tweak.rs
src/xrp/: advanced.rs  mod.rs
tests/: address_tests.rs  fuzz_tests.rs  integration.rs  property_tests.rs  sdk_features_tests.rs  sdk_serde.rs  serde_tests.rs  threshold_tests.rs
