[package]
name = "chains-sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.chains-sdk]
path = ".."
features = ["bitcoin", "hd_key", "mnemonic"]

# Fuzz targets
[[bin]]
name = "fuzz_from_wif"
path = "fuzz_targets/fuzz_from_wif.rs"
doc = false

[[bin]]
name = "fuzz_from_xprv"
path = "fuzz_targets/fuzz_from_xprv.rs"
doc = false

[[bin]]
name = "fuzz_psbt_deserialize"
path = "fuzz_targets/fuzz_psbt_deserialize.rs"
doc = false

[[bin]]
name = "fuzz_mnemonic_from_phrase"
path = "fuzz_targets/fuzz_mnemonic_from_phrase.rs"
doc = false
