[package]
name = "chains-sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
chains-sdk = { path = "..", features = [
    "ethereum",
    "bitcoin",
    "solana",
    "mnemonic",
    "hd_key",
    "bip85",
    "serde",
] }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_abi_decode"
path = "fuzz_targets/fuzz_abi_decode.rs"
doc = false

[[bin]]
name = "fuzz_rlp_decode"
path = "fuzz_targets/fuzz_rlp_decode.rs"
doc = false

[[bin]]
name = "fuzz_ct_hex"
path = "fuzz_targets/fuzz_ct_hex.rs"
doc = false

[[bin]]
name = "fuzz_bip39_mnemonic"
path = "fuzz_targets/fuzz_bip39_mnemonic.rs"
doc = false

[[bin]]
name = "fuzz_psbt_parse"
path = "fuzz_targets/fuzz_psbt_parse.rs"
doc = false

[[bin]]
name = "fuzz_permit2_hash"
path = "fuzz_targets/fuzz_permit2_hash.rs"
doc = false
